--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,6 +14,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script src="%PUBLIC_URL%/static/js/bundle.js"></script>
     
   </body>
 </html>
